[package]
name                   = "oxc_analyzer"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
oxc_parser      = { path = "../oxc_parser" }
oxc_semantic    = { path = "../oxc_semantic" }
oxc_ast         = { path = "../oxc_ast" }
oxc_syntax      = { path = "../oxc_syntax" }
oxc_span        = { path = "../oxc_span" }
oxc_diagnostics = { path = "../oxc_diagnostics" }
oxc_allocator   = { path = "../oxc_allocator" }
oxc_index       = { path = "../oxc_index" }

[lints]
workspace = true
